<resources>
    <string name="app_name">Strutoo Customer</string>
    <string name="session_expired">Session Expired!</string>
    <string name="ok">Ok</string>
    <string name="home">Home</string>
    <string name="empty"></string>
    <string name="support">Support</string>
    <string name="policy">Privacy Policy</string>
    <string name="terms_condition"><![CDATA[Terms & Conditions]]></string>
    <string name="don_apos_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="let_s_sign_you_in">Let’s Sign You In</string>
    <string name="welcome_back_you_ve_been_missed">Welcome back, you’ve been missed</string>
    <string name="your_email">"Your Email or Phone number"</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signin">Sign In</string>
    <string name="reviews">3,222 DELIVERY <font color="#96979c">REVIEWS</font></string>
    <string name="or">OR</string>
    <string name="profile">Profile</string>
    <string name="bookings">Bookings</string>
    <string name="earnings">Earnings</string>
    <string name="notifications">Notifications</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="offline">Offline</string>
    <string name="you_are_offline"><b>You are offline!</b><br>\nGo online to start accepting rides!</br></string>
    <string name="documents">Documents</string>
    <string name="driving_licence_front_side">Driving Licence<br>\nFront Side</br></string>
    <string name="driving_licence_back_side">Driving Licence<br>\nBack Side</br></string>
    <string name="driving_license_uploading">Driving License Uploading</string>
    <string name="license_uploading_text_placeholder">Your license is with us and we are reviewing it for verification purposes.</string>
    <string name="upload_next_document">Upload next document</string>
    <string name="transport_modle">Transport Modle</string>
    <string name="color">Color</string>
    <string name="vehicle_registration_no">Vehicle registration no</string>
    <string name="vehicle_no">Vehicle no</string>
    <string name="fule_type">Fule type</string>
    <string name="submit">Submit</string>
    <string name="vehicle_registration">Vehicle Registration</string>
    <string name="welcome">Welcome</string>
    <string name="enter_the_email_associated_with_your_account_to_reset_your_password">"Enter the Email associated with your account  to reset your password. "</string>
    <string name="getting_started">Getting Started</string>
    <string name="create_an_account_to_continue">Create an account to continue</string>
    <string name="your_phone">Your Phone</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="otp_authentication">"OTP Authentication "</string>
    <string name="an_authentication_code_has_been_sent_to_91_999_999_999_0">An Authentication Code has been sent to (+91) 999 999 999 0</string>
    <string name="resend">Resend</string>
    <string name="first_name">First Name</string>
    <string name="country_state_city">Country, State, City</string>
    <string name="last_name">Last Name</string>
    <string name="you_made_kes_29_05_payment_to_connor_chavez_for_your_ride">You made KES 29.05 payment to Connor Chavez for your ride</string>
    <string name="recent">Recent</string>
    <string name="older_notification">Older notification</string>
    <string name="online">Online</string>
    <string name="username">Username</string>
    <string name="your_vehicle">Your Vehicle</string>
    <string name="accept">Accept</string>
    <string name="ignore">Ignore</string>
    <string name="type_a_message">Type a message</string>
    <string name="exit_message">Are you sure, You want to exit?</string>
    <string name="cancel">Cancel</string>
    <string name="profile_setup">Profile Setup</string>
    <string name="are_your_sure_want_to_logout">Are you sure, You want to Logout?</string>
    <string name="save">Save</string>
    <string name="reenter_password">Re-enter password</string>
    <string name="new_password">New password</string>
    <string name="current_password">Current Password</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_bold"><u>Change Password</u></string>
    <string name="some_error_occured">Some error occurred!</string>
    <string name="your_device_offline">You are offline.</string>
    <string name="enter_email">Please enter email address</string>
    <string name="enter_valid_email">Please enter valid email address</string>
    <string name="enter_phone">Please enter phone  number</string>
    <string name="enter_valid_phone">Please enter valid phone number</string>
    <string name="select_country_code">Please select country code</string>
    <string name="enter_password">Please enter password</string>
    <string name="strong_password">Password must containg atleast one upper case, one special character, one numeric and must be of atleast 8 characters</string>
    <string name="enter_confirm_password">Please enter confirm password</string>
    <string name="password_does_not_match">Passwords does not match.</string>
    <string name="otp_resent">Otp resent successfully.</string>
    <string name="enter_first_name">Please enter first name</string>
    <string name="enter_last_name">Please enter last name</string>
    <string name="enter_address">Please enter address</string>
    <string name="signed_up_successfully">Signed Up Successfully.</string>
    <string name="logged_in_successfully">Logged in successfully.</string>
    <string name="enter_email_or_password">Please enter email or password</string>
    <string name="enter_valid_email_or_password">Please enter valid email address or phone number</string>
    <string name="enter_new_password">Please enter new password</string>
    <string name="confirm_new_password">Please confirm new password</string>
    <string name="enter_old_password">Please enter current password</string>
    <string name="skip">SKIP</string>
    <string name="shop">SHOP</string>
    <string name="empty_value">empty</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="watch">Watch</string>
    <string name="_145_stanfort_ave_wallington_13750">145 Stanfort Ave, Wallington 13750</string>
    <string name="discover_the_service">discover the services</string>
    <string name="top_salons">top salons</string>
    <string name="seeall">See All</string>
    <string name="iconic_beauty_salon">Iconic beauty salon</string>
    <string name="_3_222_delivery_reviews"><font color="#FF000000">3,222 DELIVERY</font><font color="#96979c"> REVIEWS</font></string>
    <string name="verified_customer">Verified Customer</string>
    <string name="information">INFORMATION</string>
    <string name="opening_time">OPENING TIME</string>
    <string name="staff">OUR STAFF</string>
    <string name="contactus">CONTACT</string>
    <string name="address">ADDRESS</string>
    <string name="other_branch">OTHER BRANCHES</string>
    <string name="map"><u>MAP</u></string>
    <string name="makeup_services">Makeup Services</string>
    <string name="women_s_haircut">Women’s haircut</string>
    <string name="hair_colouring">Hair colouring</string>
    <string name="hair_highlights">Hair highlights</string>
    <string name="hair_strengthening">Hair strengthening</string>
    <string name="hair_styling">Hair styling</string>
    <string name="permanent_curls">Permanent curls</string>
    <string name="summary">Hair Stylist responsibilities include cutting hair using basic and advanced techniques, consulting customers about styles and colors and applying hair care products, like treatment oils and masks. \n\nIf you have experience cutting short and long hair and are up-to-date with styling trends, we’d like to meet you.</string>
    <string name="personal_info">Personal Info</string>
    <string name="phone_number">Phone Number</string>
    <string name="add_instructions">Add service instructions</string>
    <string name="max_300_words">Max(300 Words)</string>
    <string name="booking_confirmed">Booking Confirmed</string>
    <string name="cong_booking_confirm">your order.</string>
    <string name="building_number">Building Number</string>
    <string name="apartment_number">Apartment Number</string>
    <string name="city">City</string>
    <string name="region">Region</string>
    <string name="area">Area</string>
    <string name="compound">Compound</string>
    <string name="payment_summary">Payment Summary</string>
    <string name="booking_summary_note">If you choose to cancel, you can do it within 60 seconds after booking service. Post which you will be charged 100% cancellation fee.</string>
    <string name="confirm_details">Confirm Details</string>
    <string name="map_api_key">AIzaSyCNJWivcEuGZsfT5TX36bLdnSFpIfbFb7E</string>
    <string name="send_message">Comment</string>
    <string name="i_have_oily_skin_this_primer_covered_my_pores_well_and_gave_me_a_perfect_base">I have oily skin. This primer covered my pores well and gave me a perfect base.....</string>
    <string name="facing_any_issue">Facing any issue?</string>
    <string name="getInTouch">Please get in touch and we will be happy to help you</string>
    <string name="write_to_us">Write to Us</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet. Et dignissimos libero qui dignissimos rerum hic totam velit et Quis sint consequatur laudantium id aliquid illo ad internos galisum. Eos quisquam velit qui</string>
    <string name="terms_conds"><u>Terms &amp; Conditions</u></string>
    <string name="select_reason">Select reason</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="your_comments">Your Comments</string>
    <string name="a_no_order_found">No Order Found !</string>
    <string name="a_cancel_reason_1">Product is not required anymore</string>
    <string name="a_cancel_reason_2">Cheaper alternative available for lesser price.</string>
    <string name="a_cancel_reason_3">Bad review from friends/relatives after ordering the product.</string>
    <string name="rate_now"><u>Rate Now</u></string>
    <string name="track_booking">Track Booking</string>
    <string name="destination">Destination</string>
    <string name="pay">Pay</string>
    <string name="note_long"> <font color="#ec1550">Note :</font> If you choose to cancel, you can do it within 60\n seconds after booking service. Post which you will be\n charged 100% cancellation fee.</string>
    <string name="strutoo">STRUTOO</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="start_in"><font color="#c3c3c3">Starts in</font> \n40 Min 36 Sec</string>
    <string name="makeUp">Type of Service: <font color="#1d1d1d">MakeUp</font></string>
    <string name="congo_booking_confirm">Congratulations, your booking has been confirmed.\nCheck your email to see the status for\n your order.</string>
    <string name="title_home" />
    <string name="studio">STUDIO</string>
    <string name="book">Book</string>
    <string name="follow">Follow</string>
    <string name="offers">Offers</string>
    <string name="desc_shop">Try our shopping experience to choose\nand buy from thousands of Beauty and Health\nproducts</string>
    <string name="desc_book">Find and book an appointment\nwithin seconds with your desired Health and\nbeauty services</string>
    <string name="desc_watch">Explore the latest Beauty looks and\ntrends from our Beauty Experts and Bloggers</string>
    <string name="we_sent_verification">We have just sent you a verification code via Simranahitaan@apptunix.com</string>
</resources>